[package]
name = "ira-ecc"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-lzma = "0.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
rand_chacha = "0.3.1"
indicatif = "0.17.8"
sha2 = "0.10.8"
statrs = "0.17.1"
priority-queue = "2.0.3"
ordered-float = "4.2.1"
peroxide = "0.37.9"
minilp = "0.2.2"
